Got firestore working

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">SpotyFM</string>
+    <string name="textViewAvailableStationsText">Radio staions</string>
 </resources>
