added song info and other things

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="app_name">SpotyFM</string>
     <string name="text_view_available_stations_title">Radio stations</string>
+    <string name="vertical_ellipsis">&#8942;</string>
 </resources>
